src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>Product2.Product_Category__c</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Product_Name__c</fullName>
        <formula>Product2.Public_Product_Name__c</formula>
        <label>Public Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <formula>Product2.Sales_Team__c</formula>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
</CustomObject>